--- a/javascript-challenge.css
+++ b/javascript-challenge.css
@@ -26,15 +26,33 @@ section.example {
     padding: 6px;
     border-bottom: 1px solid #C3EBEE; }
 
+[vs-role=drawer] {
+  background-color: #00B7BD;
+  color: white; }
+  [vs-role=drawer]:not(.open) {
+    height: 0;
+    overflow: hidden; }
+  [vs-role=drawer].open {
+    padding: 6px; }
+
+[vs-role=handle] {
+  border: 1px solid #00B7BD;
+  padding: 6px;
+  margin-top: 2px; }
+  [vs-role=handle]:hover {
+    cursor: pointer; }
+
 form[vs-type=extendingForm] [vs-role=extension] {
   margin: 5px 0;
+  width: 100%;
   padding: 12px;
-  background-color: #EEEEEE;
+  background-color: #C3EBEE;
   display: none; }
   form[vs-type=extendingForm] [vs-role=extension].reveal {
     display: block; }
 
 [vs-type=tabs] ul {
+  margin: 0;
   padding: 0;
   list-style: none;
   width: 100%; }
@@ -45,9 +63,24 @@ form[vs-type=extendingForm] [vs-role=extension] {
     clear: both; }
   [vs-type=tabs] ul li[vs-role=tab] {
     float: left;
-    padding: 12px; }
+    padding: 6px 12px;
+    margin: 0 2px;
+    border: 1px solid #C3EBEE;
+    border-bottom: none;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    color: #C3EBEE; }
     [vs-type=tabs] ul li[vs-role=tab]:hover {
       cursor: pointer; }
+    [vs-type=tabs] ul li[vs-role=tab].active {
+      color: white;
+      background-color: #00B7BD;
+      border-color: #00B7BD; }
 
-[vs-type=tabs] [vs-role=content]:not(.active) {
-  display: none; }
+[vs-type=tabs] [vs-role=content] {
+  border: 1px solid #00B7BD;
+  width: 100%; }
+  [vs-type=tabs] [vs-role=content]:not(.active) {
+    display: none; }
+  [vs-type=tabs] [vs-role=content] img {
+    width: 100%; }
