--- a/styles/widgets/extendingForm.scss
+++ b/styles/widgets/extendingForm.scss
@@ -1,6 +1,6 @@
-form[vs-type=extendingForm] {
+form[kjs-type=extendingForm] {
 
-  [vs-role=extension] {
+  [kjs-role=extension] {
     margin: 5px 0;
     width: 100%;
     padding: 12px;
